--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   body {
-    @apply font-roboto;
+    @apply font-sans bg-black text-white;
   }
   h1,
   h2,
@@ -12,7 +12,7 @@
   h4,
   h5,
   h6 {
-    @apply font-poppins;
+    @apply font-sans;
   }
 }
 
